@@ -1,3 +1,8 @@
+2016-11-14  Ola Jeppsson  <ola@adapteva.com>
+
+	* src/GdbServer.h <IDLE_PID>: Rename from ...
+	<DEFAULT_PID>: ... to this.
+
 2016-10-31  Ola Jeppsson  <ola@adapteva.com>
 
 	* src/GdbServer.cpp (GdbServer::rspVpkt): Defer 'vCtrlC' packet to
